# openarm_ros2

openarm_bimanual_moveit_config/config/: initial_positions.yaml
openarm_cartesian_control/: CMakeLists.txt  README.md  package.xml
openarm_cartesian_control/include/openarm_cartesian_control/: pose_goal_bridge.hpp
openarm_cartesian_control/launch/: cartesian_pose_bridge.launch.py  tf_world_fix.launch.py
openarm_cartesian_control/src/: pose_goal_bridge.cpp  tf_probe_node.cpp
openarm_cartesian_control/srv/: GetPose.srv
openarm_description/config/hand/openarm_hand/: inertials.yaml
openarm_description/urdf/ros2_control/: openarm.bimanual.ros2_control.xacro
openarm_rl_inference/: package.xml  setup.py
openarm_rl_inference/config/: rl_inference.yaml
openarm_rl_inference/launch/: rl_inference.launch.py
openarm_rl_inference/models/: best_agent.pt
openarm_rl_inference/openarm_rl_inference/: ckpt_loader.py  kinematics.py  rl_inference_node.py  safety.py  scaling.py
openarm_rl_inference/resource/: openarm_rl_inference
openarm_rl_inference/scripts/: openarm_rl_inference  publish_pose_demo.py
